feat: add render apiUrl

--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="utf-8" />
+    <title>GO Lembrar</title>
+    <base href="/" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1"
+    />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="favicon.ico"
+    />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <title>GO Lembrar</title>
-  <base href="/" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" type="image/x-icon" href="favicon.ico" />
-</head>
-
-<body>
-  <gl-root></gl-root>
-</body>
-
+  <body>
+    <gl-root></gl-root>
+  </body>
 </html>
