--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
-    <title>GO Lembrar</title>
+    <title>goLembrar</title>
     <base href="/" />
     <meta
       name="viewport"
