--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,23 @@
       http-equiv="Content-Security-Policy"
       content="upgrade-insecure-requests"
     />
+
+    <!-- Hotjar Tracking Code for Site 5181156 (name missing) -->
+    <script>
+      ;(function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            ;(h.hj.q = h.hj.q || []).push(arguments)
+          }
+        h._hjSettings = { hjid: 5181156, hjsv: 6 }
+        a = o.getElementsByTagName('head')[0]
+        r = o.createElement('script')
+        r.async = 1
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv
+        a.appendChild(r)
+      })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=')
+    </script>
   </head>
 
   <body>
